--- a/src/App.css
+++ b/src/App.css
@@ -18,11 +18,6 @@
 
 /*Style*/
 
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
 * {
   margin: 0;
@@ -119,13 +114,14 @@ nav.navbar .navbar-nav a.nav-link.navbar-link.active {
 }
 span.navbar-text {
     display: flex;
+    
     align-items: center;
 }
-.social-icon {
+.social-icons {
     display: inline-block;
     margin-left: 14px;
 }
-.social-icon a {
+.social-icons a {
     width: 42px;
     height: 42px;
     background: rgba(217, 217, 217, 0.1);
@@ -135,9 +131,9 @@ span.navbar-text {
     align-items: center;
     justify-content: center;
     line-height: 1;
-    border: 1px solid rgba(255, 255, 255, 0.5);
+    border: 1px solid rgba(122, 61, 61, 0.5);
 }
-.social-icon a::before {
+.social-icons a::before {
     content: "";
     width: 42px;
     height: 42px;
@@ -147,15 +143,15 @@ span.navbar-text {
     transform: scale(0);
 	transition: 0.3s ease-in-out;
 }
-.social-icon a:hover::before {
+.social-icons a:hover::before {
     transform: scale(1);
 }
-.social-icon a img {
+.social-icons a img {
 	width: 40%;
 	z-index: 1;
 	transition: 0.3s ease-in-out;
 }
-.social-icon a:hover img {
+.social-icons a:hover img {
 	filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%) hue-rotate(346deg) brightness(95%) contrast(86%);
 }
 .navbar-text button {
